2022-03-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 49787: Test/W02jobs.ztst, Test/W03jobparameters.ztst: test for
	jobs fix in 49783.

2022-03-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 49783: Src/jobs.c, Src/Modules/parameter.c: Consistently use
	old job table in parameter module.

	* users/27536: Doc/Zsh/builtins.yo: Clarify interaction of
	history matching and numeric indices.

2022-02-23  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49766: Completion/Unix/Command/_less: add quotes to -" and -#

	* 49765: Completion/Unix/Command/_less: add option --color
	as synonym for -D

2022-02-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/contrib.yo, Src/Modules/parameter.c,
	Src/string.c, Src/zsh.h: Fix some typos and markup.

2022-02-22  Peter Stephenson  <p.stephenson@samsung.com>

	* 49672: Doc/Zsh/expn.yo: document "tied" output in parameter
	(t) output.

2022-02-22  Mikael Magnusson  <mikachu@gmail.com>

	* 49769: Doc/Zsh/mod_stat.yo: Mention how to show nanosecond
	precision

2022-02-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 49728: Functions/VCS_Info/Backends/VCS_INFO_get_data_hg:
	vcs_info hg mq: Don't include applied patches in the unapplied
	patches

	* 49727 (+ comment): Doc/Zsh/contrib.yo,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set-patch-format: vcs_info
	quilt: Pass the patches dir path to the gen-applied-string,
	gen-unapplied-string, and set-patch-format hooks

	* unposted: Functions/VCS_Info/Backends/VCS_INFO_get_data_hg:
	vcs_info hg mg (with get-unapplied set): Stop leaking a variable
	to global scope

2022-02-16  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49757 (sourceforge #1): samcarter: Completion/Unix/Command/_tex:
	offer *.dtx as TeX input files

2022-02-15  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
